Fixed buttons display on small screen

--- a/template/static/style.css
+++ b/template/static/style.css
@@ -1,4 +1,4 @@
-h1, h2, h5, h6{
+h2, h3, h5, h6{
     color: white;
 }
 
@@ -6,7 +6,7 @@ h1, h2, h5, h6{
     margin-top: 1%;
     color: dodgerblue;
     border-radius: 50px;
-    font-size: 23px;
+    font-size: 21.8px;
 }
 
 #contact{
@@ -76,7 +76,8 @@ body{
 }
 
 #chan{
-    padding-right: 22px;
+    margin-right: 3px;
+    padding-right: 19.3px;
     padding-left: 7px;
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
